--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,20 @@
-# Created by https://www.toptal.com/developers/gitignore/api/macos,vim,lua
-# Edit at https://www.toptal.com/developers/gitignore?templates=macos,vim,lua
+# Created by https://www.toptal.com/developers/gitignore/api/macos,vim,lua,git
+# Edit at https://www.toptal.com/developers/gitignore?templates=macos,vim,lua,git
+
+### Git ###
+# Created by git for backups. To disable backups in Git:
+# $ git config --global mergetool.keepBackup false
+*.orig
+
+# Created by git when using merge tools for conflicts
+*.BACKUP.*
+*.BASE.*
+*.LOCAL.*
+*.REMOTE.*
+*_BACKUP_*.txt
+*_BASE_*.txt
+*_LOCAL_*.txt
+*_REMOTE_*.txt
 
 ### Lua ###
 # Compiled Lua sources
@@ -97,5 +112,5 @@ tags
 # Persistent undo
 [._]*.un~
 
-# End of https://www.toptal.com/developers/gitignore/api/macos,vim,lua
+# End of https://www.toptal.com/developers/gitignore/api/macos,vim,lua,git
 
